objects/sixsense__Batch_Log__c.object
<CustomObject>
    <description>Custom object created to capture the results of the batch jobs.</description>
    <fields>
        <fullName>sixsense__API_End_Datetime__c</fullName>
        <label>API End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sixsense__API_Start_Datetime__c</fullName>
        <label>API Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sixsense__Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Chunk_Size__c</fullName>
        <label>Chunk Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Duplicate_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Duplicate Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Error_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Expected_Total_Records__c</fullName>
        <label>Expected Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Ignored_Count__c</fullName>
        <description>This field holds the count of records encountered which are ignorable errors. Typically, missing references to deleted related records.</description>
        <label>Ignored Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Job_ID__c</fullName>
        <description>ID of the batch job that the log record is for,</description>
        <label>Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Log_Message__c</fullName>
        <description>Field to capture log message.</description>
        <label>Log Message</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sixsense__Processing_Time__c</fullName>
        <label>Processing Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sixsense__Record_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Records Successful</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sixsense__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sixsense__Time_Logged__c</fullName>
        <description>Time that the log record was created at.</description>
        <label>Time Logged</label>
        <type>DateTime</type>
    </fields>
    <label>6sense Batch Log</label>
    <listViews>
        <fullName>sixsense__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BL-{00000000}</displayFormat>
        <label>Batch Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>6sense Batch Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>